--- a/Lessons/Numpy basics.ipynb
+++ b/Lessons/Numpy basics.ipynb
@@ -736,12 +736,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1d4db499",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.23514632 0.66898456]\n",
+      "  [0.17002311 0.7542751 ]]\n",
+      "\n",
+      " [[0.89211969 0.30463927]\n",
+      "  [0.22058522 0.32341492]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here"
+    "import numpy as np\n",
+    "a = np.random.random((2,2,2))\n",
+    "print(a)"
    ]
   },
   {
@@ -754,14 +768,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "7dd331a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1. , 0. , 2.5])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import numpy as np\n",
     "def relu_numpy(x):\n",
     "    \n",
-    "    return\n",
+    "    return np.maximum(x,np.zeros(len(x)))\n",
     "\n",
     "relu_numpy(np.array([1, -3, 2.5]))"
    ]
@@ -776,13 +802,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "e359f2a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.729746940310715"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def euclidean_norm_numpy(x):\n",
-    "  return\n",
+    "    s = np.sqrt(np.sum(x.T*x))\n",
+    "    return s\n",
     "\n",
     "my_vector = np.array([0.5, -1.2, 3.3, 4.5])\n",
     "euclidean_norm_numpy(my_vector)"
@@ -798,24 +836,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "cb92ba45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.8, 1.4])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def euclidean_norm_2d(X):\n",
-    "  return\n",
+    "    s = np.sum(X,1)\n",
+    "    return s\n",
     "\n",
     "my_matrix = np.array([[0.5, -1.2, 4.5],\n",
     "                      [-3.2, 1.9, 2.7]])\n",
     "# Should return an array of size 2.\n",
     "euclidean_norm_2d(my_matrix)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6220d9f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -829,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
