--- a/exercices/part0.ipynb
+++ b/exercices/part0.ipynb
@@ -117,7 +117,11 @@
    "outputs": [],
    "source": [
     "# write your program here\n",
-    "# ...."
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "\n",
+    "print('multiplication of {} and {} is {}'.format(a,b,a*b))\n",
+    "print('sum of {} and {} is {}'.format(a,b,a+b))"
    ]
   },
   {
@@ -143,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here"
+    "print(\"Name\",\"Is\",\"James\",sep = \"\")"
    ]
   },
   {
@@ -177,7 +181,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exercise 3 code here"
+    "i = 1\n",
+    "while i<11:\n",
+    "    print(i)\n",
+    "    i+=1"
    ]
   },
   {
@@ -204,7 +211,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your program here"
+    "for i in range(1,6):\n",
+    "    for j in range(1,i+1):\n",
+    "        print(j,end = \" \")\n",
+    "    print(\"\\n\",end = \"\")"
    ]
   },
   {
@@ -227,12 +237,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "f5350502",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1 * 5  =  5\n",
+      "2 * 5  =  10\n",
+      "3 * 5  =  15\n",
+      "4 * 5  =  20\n",
+      "5 * 5  =  25\n",
+      "6 * 5  =  30\n",
+      "7 * 5  =  35\n",
+      "8 * 5  =  40\n",
+      "9 * 5  =  45\n",
+      "10 * 5  =  50\n",
+      "11 * 5  =  55\n",
+      "12 * 5  =  60\n"
+     ]
+    }
+   ],
    "source": [
-    "# your program goes here"
+    "a = int(input())\n",
+    "for i in range(1,13):\n",
+    "    print(i,\"*\",a,\" = \",a*i)"
    ]
   },
   {
@@ -277,7 +309,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your prgram goes here"
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "\n",
+    "if a*b > 1000:\n",
+    "    print(\"the result is {}\".format(a*b))\n",
+    "else:\n",
+    "    print(\"THe result is {}\".format(a+b))"
    ]
   },
   {
@@ -313,13 +351,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here"
+    "def Ex7(l):\n",
+    "    if l[0] == l[len(l)-1]:\n",
+    "        return True\n",
+    "    return False"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -333,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
