--- a/exercices/part1.ipynb
+++ b/exercices/part1.ipynb
@@ -19,19 +19,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "fc19e47e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the sliced string \"lo Wo\" and the length of the string is 13\n"
+     ]
+    }
+   ],
    "source": [
     "#Declare the function\n",
-    "#...\n",
+    "def Ex1(s,i,j):\n",
+    "    return s[i:j],len(s)\n",
     "\n",
     "#Call the function\n",
-    "#...\n",
+    "s = \"Hello World !\"\n",
+    "a = Ex1(s,3,8)[0]\n",
+    "b = Ex1(s,3,8)[1]\n",
     "\n",
     "#print the result in a well formated format\n",
-    "#..."
+    "print(\"Here is the sliced string \\\"{}\\\" and the length of the string is {}\".format(a,b))"
    ]
   },
   {
@@ -54,19 +65,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "b9a1a7ff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1\n",
+      "<class 'float'>\n",
+      "2\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "#Declare the function\n",
-    "#...\n",
+    "def Ex2(x,y):\n",
+    "    return x+y\n",
     "\n",
     "#Call with the values 1 and two\n",
-    "#...\n",
+    "a = Ex2(1,2.1)\n",
+    "print(a)\n",
     "\n",
     "#Check the type of the result\n",
-    "#..."
+    "print(type(a))\n",
+    "\n",
+    "#Call with the values False and 2\n",
+    "a = Ex2(False,2)\n",
+    "print(a)\n",
+    "\n",
+    "#Check the type of the result\n",
+    "print(type(a))"
    ]
   },
   {
@@ -93,16 +124,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "6e0119f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'H': 1, 'e': 1, 'l': 3, 'o': 2, ' ': 2, 'W': 1, 'r': 1, 'd': 1, '!': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "#Declare the function\n",
-    "#...\n",
     "\n",
-    "#Print the result\n",
-    "#..."
+    "s = \"Hello World !\"\n",
+    "\n",
+    "d = {k:s.count(k) for k in s }\n",
+    "\n",
+    "print(d)"
    ]
   },
   {
@@ -125,8 +166,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "b3e59b61",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'lib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-1e62e6fc1c2f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlib\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprint_orl\u001b[0m \u001b[0;31m#this is a lib you dont have access to\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint_orl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'lib'"
+     ]
+    }
+   ],
+   "source": [
+    "from lib import print_orl #this is a lib you dont have access to\n",
+    "print_orl([1,2,3],[1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9eb1eb7a",
    "metadata": {},
    "outputs": [
     {
@@ -140,18 +206,12 @@
     }
    ],
    "source": [
-    "from lib import print_orl #this is a lib you dont have access to\n",
-    "print_orl([1,2,3],[1,2,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "9eb1eb7a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#..."
+    "a = [1,2,3]\n",
+    "b = [1,2,3]\n",
+    "\n",
+    "\n",
+    "for i,j in zip(a,b[::-1]):\n",
+    "    print(i,j)"
    ]
   },
   {
@@ -174,22 +234,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "id": "feabf6d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1., 0., 0., 0., 0., 0.],\n",
+       "       [1., 1., 1., 1., 1., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "#The input\n",
     "a = np.ones((1, 10)).reshape(2, -1)\n",
     "b = np.zeros((1, 10)).reshape(2, -1)\n",
-    "\n",
     "#Try to print input\n",
-    "#...\n",
+    "c = np.zeros((2,10))\n",
+    "np.concatenate((a,b),1,c)\n",
     "\n",
     "#concatenate horizontally\n",
-    "#output shoul look like:     array([[1., 1., 1., 1., 1., 0., 0., 0., 0., 0.],\n",
+    "#output should look like:     array([[1., 1., 1., 1., 1., 0., 0., 0., 0., 0.],\n",
     "#                                   [1., 1., 1., 1., 1., 0., 0., 0., 0., 0.]])\n",
     "\n",
     "\n",
@@ -214,34 +286,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "dbb11c06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 1 1 1 2 2 2 0 1 2 0 1 2 0 1 2]\n",
+      "[[[1. 2. 3.]\n",
+      "  [1. 2. 3.]\n",
+      "  [1. 2. 3.]]\n",
+      "\n",
+      " [[1. 2. 3.]\n",
+      "  [1. 2. 3.]\n",
+      "  [1. 2. 3.]]\n",
+      "\n",
+      " [[1. 2. 3.]\n",
+      "  [1. 2. 3.]\n",
+      "  [1. 2. 3.]]]\n",
+      "[[1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "a = np.arange(3)\n",
     "b = np.ones((3,3,3))\n",
     "\n",
-    "\n",
     "#output1 the following array: array([0, 0, 0, 1, 1, 1, 2, 2, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2])\n",
-    "#...\n",
+    "c = np.repeat(a,3)\n",
+    "d = np.concatenate((a,a,a))\n",
+    "e = np.concatenate((c,d))\n",
+    "\n",
+    "print(e)\n",
     "\n",
     "#output2 the follwing array: array([[[1., 2., 3.],\n",
     "#                                    [1., 2., 3.],\n",
     "#                                    [1., 2., 3.]],\n",
-    "\n",
     "#                                    [[1., 2., 3.],\n",
     "#                                    [1., 2., 3.],\n",
     "#                                    [1., 2., 3.]],\n",
-    "\n",
     "#                                    [[1., 2., 3.],\n",
     "#                                    [1., 2., 3.],\n",
     "#                                    [1., 2., 3.]]])\n",
     "\n",
+    "e = a + b\n",
+    "\n",
+    "print(e)\n",
     "#output3 array([[1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
     "#                [1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
     "#                [1., 1., 1., 1., 1., 1., 1., 1., 1.]])\n",
-    "\n"
+    "\n",
+    "e = b.reshape(3,9)\n",
+    "\n",
+    "print(e)"
    ]
   },
   {
@@ -251,11 +354,19 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "972c9a24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -269,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
