--- a/exercices/python_oop.ipynb
+++ b/exercices/python_oop.ipynb
@@ -60,14 +60,14 @@
    "metadata": {},
    "source": [
     "### write your answer here\n",
-    "1.  ...\n",
-    "2.  ...\n",
-    "3.  ...\n",
-    "4.  ... \n",
-    "5.  ...\n",
-    "6.  ...\n",
-    "7.  ...\n",
-    "8.  ..."
+    "1.  Name of the class\n",
+    "2.  Name of the instance\n",
+    "3.  The parameter called \"surname\" to be entered while declaring the instance\n",
+    "4.  Refers to that instance itself\n",
+    "5.  It's a method of the class Person that returns the age of the person\n",
+    "6.  It's a variable used in the function age, it stores the age of the person to be returned\n",
+    "7.  The property of self in class Person called email which is affected by the parameter email while declaring the object\n",
+    "8.  The property of the object person called email which is affected by the parameter email while declaring the object"
    ]
   },
   {
@@ -84,7 +84,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here"
+    "class Person:\n",
+    "    COUNT = 0\n",
+    "    def __init__(self, name, surname, birthdate, address, telephone, email):\n",
+    "        self.name = name\n",
+    "        self.surname = surname\n",
+    "        self.birthdate = birthdate\n",
+    "\n",
+    "        self.address = address\n",
+    "        self.telephone = telephone\n",
+    "        self.email = email\n",
+    "        Person.COUNT += 1\n",
+    "\n",
+    "    def age(self):\n",
+    "        age = datetime.date.today()\n",
+    "        if Person.COUNT == 1:\n",
+    "            Person.COUNT += 1\n",
+    "            return age\n",
+    "        today = datetime.date.today() - age\n",
+    "        if today == 0:\n",
+    "            return 0\n",
+    "        return today"
    ]
   },
   {
@@ -110,7 +130,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# surname and profession are variables of the entire class Smith called class attributes, while name(in the\n",
+    "#declaration) is only a parameter and (in the function as in self.name) is a property of the class.\n",
+    "#So when an object is created, the name should be given as it will be a property of it, the profession not\n",
+    "#necessarily, if it is not given then the profession will be that of the class which is \"smith\", as for the surname\n",
+    "#It is not changeable, every object of the class Smith created will have surname = \"Smith\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,13 +169,168 @@
     "## Exercise 6:\n",
     "Write a class for creating completely generic objects: its `__init__` function should accept any number of keyword parameters, and set them on the object as attributes with the keys as names. Write a `__str__` method for the class – the string it returns should include the name of the class and the values of all the object’s custom instance attributes."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exercice 4:\n",
+    "\n",
+    "class Numbers :\n",
+    "    MULTIPLIER = 4\n",
+    "    def __init__(self,x,y):\n",
+    "        if isinstance(x) != (float or int) or isinstance(y) != (float or int):\n",
+    "            raise TypeError\n",
+    "        self.x = x\n",
+    "        self.y =y\n",
+    "    def add(self):\n",
+    "        return self.x + self.y\n",
+    "    @classmethod\n",
+    "    def multiply(self):\n",
+    "        return Numbers.MULTIPLIER * self.x\n",
+    "    @staticmethod\n",
+    "    def subtract(b,c):\n",
+    "        return b - c\n",
+    "    @property\n",
+    "    def value(self):\n",
+    "        return self.x,self.y\n",
+    "    @value.setter\n",
+    "    def value(self,x = None,y = None):\n",
+    "        if x != None:\n",
+    "            self.x  = x\n",
+    "        if y != None:\n",
+    "            self.y = y\n",
+    "    @value.deleter\n",
+    "    def value(self,x = False, y = False):\n",
+    "        if x == True:\n",
+    "            del self.x\n",
+    "        if y == True:\n",
+    "            del self.y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'address', 'age', 'birthdate', 'email', 'name', 'surname', 'telephone'] \n",
+      "\n",
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'age']\n",
+      "My name : Jane,\n",
+      "My surname :Doe,\n",
+      "My birthdate :1992-03-12,\n",
+      "My address :No. 12 Short Street, Greenville,\n",
+      "My telephone :555 456 0987,\n",
+      "My email :jane.doe@example.com\n",
+      "My name : Jane,\n",
+      "My surname :Doe,\n",
+      "My birthdate :1992-03-12,\n",
+      "My address :No. 12 Short Street, Greenville,\n",
+      "My telephone :555 456 0987,\n",
+      "My email :jane.doe@example.com\n",
+      "<class '__main__.Person'>\n",
+      "<class 'type'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercice 5\n",
+    "import datetime\n",
+    "\n",
+    "class Person:\n",
+    "\n",
+    "    def __init__(self, name, surname, birthdate, address, telephone, email):\n",
+    "        self.name = name\n",
+    "        self.surname = surname\n",
+    "        self.birthdate = birthdate\n",
+    "\n",
+    "        self.address = address\n",
+    "        self.telephone = telephone\n",
+    "        self.email = email\n",
+    "\n",
+    "    def age(self):\n",
+    "        today = datetime.date.today()\n",
+    "        age = today.year - self.birthdate.year\n",
+    "\n",
+    "        if today < datetime.date(today.year, self.birthdate.month, self.birthdate.day):\n",
+    "            age -= 1\n",
+    "\n",
+    "        return age\n",
+    "    def __str__(self):\n",
+    "        return \"My name : {},\\nMy surname :{},\\nMy birthdate :{},\\nMy address :{},\\nMy telephone :{},\\nMy email :{}\".format(self.name,self.surname,self.birthdate,self.address,self.telephone,self.email)\n",
+    "    \n",
+    "\n",
+    "person = Person(\n",
+    "    \"Jane\",\n",
+    "    \"Doe\",\n",
+    "    datetime.date(1992, 3, 12),\n",
+    "    \"No. 12 Short Street, Greenville\",\n",
+    "    \"555 456 0987\",\n",
+    "    \"jane.doe@example.com\"\n",
+    ")\n",
+    "print(dir(person),\"\\n\")\n",
+    "print(dir(Person))\n",
+    "print(person.__str__())\n",
+    "print(str(person))\n",
+    "print(type(person))\n",
+    "print(type(Person))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ayoub\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercice 6\n",
+    "\n",
+    "class generic:\n",
+    "    def __init__(self,**kwargs):\n",
+    "        self.__dict__.update(kwargs)\n",
+    "        self.dic = kwargs\n",
+    "    def __str__(self):\n",
+    "        x = \"Class name : {}\\n\".format(type(self))\n",
+    "        for key, value in self.dic.items():\n",
+    "            x += \"{} : {}\\n\".format(key,value)\n",
+    "        return x\n",
+    "\n",
+    "obj = generic(name = \"Ayoub\", yon = \"yes\")\n",
+    "print(obj.name)"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "plaintext"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.12"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
