--- a/exercices/part3/part3_Pandas_Exs.ipynb
+++ b/exercices/part3/part3_Pandas_Exs.ipynb
@@ -1440,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "173822ad",
    "metadata": {},
    "outputs": [
@@ -1562,20 +1562,21 @@
        "volvo          13415.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Exercice 6\n",
     "m_prices = df[['company','price']].groupby(['company']).max()\n",
     "m_prices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "82720a46",
+   "execution_count": 9,
+   "id": "6b2992aa",
    "metadata": {},
    "outputs": [
     {
@@ -1696,20 +1697,21 @@
        "volvo                23.000000"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Exercice 7\n",
     "avg_mil = df[['company','average-mileage']].groupby(['company']).mean()\n",
     "avg_mil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "76c71c95",
+   "execution_count": 10,
+   "id": "4b92493a",
    "metadata": {},
    "outputs": [
     {
@@ -2626,38 +2628,209 @@
        "13            three          48               47   5151.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Exercice 8\n",
     "df.sort_values('price',ascending = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "0260d5b8",
+   "execution_count": 24,
+   "id": "b3633415",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'DataFrame' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-34-5b63330ced9f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mGermanCars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Ford'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Mercedes'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'BMV'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Audi'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mjapaneseCars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Toyota'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Honda'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Nissan'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Mitsubishi '\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mGermanCars\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mjapaneseCars\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'DataFrame' object is not callable"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">Germany</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Ford</td>\n",
+       "      <td>23845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mercedes</td>\n",
+       "      <td>171995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BMV</td>\n",
+       "      <td>135925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Audi</td>\n",
+       "      <td>71400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">Japan</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>29995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>23600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Nissan</td>\n",
+       "      <td>61500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mitsubishi</td>\n",
+       "      <td>58900</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Company   Price\n",
+       "Germany 0         Ford   23845\n",
+       "        1     Mercedes  171995\n",
+       "        2          BMV  135925\n",
+       "        3         Audi   71400\n",
+       "Japan   0       Toyota   29995\n",
+       "        1        Honda   23600\n",
+       "        2       Nissan   61500\n",
+       "        3  Mitsubishi    58900"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "GermanCars = df([['Ford', 'Mercedes', 'BMV', 'Audi']])\n",
-    "japaneseCars = df([['Toyota', 'Honda', 'Nissan', 'Mitsubishi ']])\n",
+    "GermanCars = {'Company': ['Ford', 'Mercedes', 'BMV', 'Audi'], 'Price': [23845, 171995, 135925 , 71400]}\n",
+    "japaneseCars = {'Company': ['Toyota', 'Honda', 'Nissan', 'Mitsubishi '], 'Price': [29995, 23600, 61500 , 58900]}\n",
     "\n",
-    "pd.concat([GermanCars,japaneseCars])"
+    "germans = pd.DataFrame(GermanCars)\n",
+    "japanese = pd.DataFrame(japaneseCars)\n",
+    "\n",
+    "pd.concat([germans,japanese],keys = ['Germany','Japan'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8fa98865",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>horsepower</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>23845</td>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>17995</td>\n",
+       "      <td>Honda</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BMV</td>\n",
+       "      <td>135925</td>\n",
+       "      <td>BMV</td>\n",
+       "      <td>182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Audi</td>\n",
+       "      <td>71400</td>\n",
+       "      <td>Audi</td>\n",
+       "      <td>160</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Company   Price Company  horsepower\n",
+       "0  Toyota   23845  Toyota         141\n",
+       "1   Honda   17995   Honda          80\n",
+       "2     BMV  135925     BMV         182\n",
+       "3    Audi   71400    Audi         160"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Car_Price = {'Company': ['Toyota', 'Honda', 'BMV', 'Audi'], 'Price': [23845, 17995, 135925 , 71400]}\n",
+    "car_Horsepower = {'Company': ['Toyota', 'Honda', 'BMV', 'Audi'], 'horsepower': [141, 80, 182 , 160]}\n",
+    "\n",
+    "c_price = pd.DataFrame(Car_Price)\n",
+    "c_horsepower = pd.DataFrame(car_Horsepower)\n",
+    "\n",
+    "pd.concat([c_price,c_horsepower], axis = 1, join = 'inner')"
    ]
   }
  ],
