--- a/exercices/part4.ipynb
+++ b/exercices/part4.ipynb
@@ -18,13 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "48a899aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "class square():\n",
-    "    #define your methods\n",
+    "    def __init__(self,length):\n",
+    "        self.length = length\n",
+    "    def area(self):\n",
+    "        return self.length**2\n",
+    "    def perimeter(self):\n",
+    "        return 4*self.length\n",
     "    pass"
    ]
   },
@@ -46,14 +51,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "007adc0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class rectangle(square):\n",
-    "        #__init__ method only\n",
-    "        pass"
+    "        def __init__(self,L,l):\n",
+    "            self.length = L\n",
+    "            self.width = l\n",
+    "            super(rectangle,self).__init__(self.length)\n",
+    "        def area(self):\n",
+    "            return self.length * self.width\n",
+    "        def perimeter(self):\n",
+    "            return 2*(self.length+self.width)\n",
+    "        pass\n",
+    "a = rectangle(2,3)\n",
+    "a.area()"
    ]
   },
   {
