--- a/exercices/python_oop.ipynb
+++ b/exercices/python_oop.ipynb
@@ -172,19 +172,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-1981f30783b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNumbers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "#Exercice 4:\n",
     "\n",
     "class Numbers :\n",
     "    MULTIPLIER = 4\n",
     "    def __init__(self,x,y):\n",
-    "        if isinstance(x) != (float or int) or isinstance(y) != (float or int):\n",
-    "            raise TypeError\n",
+    "        #if isinstance(x) != (float or int) or isinstance(y) != (float or int):\n",
+    "         #   raise TypeError\n",
     "        self.x = x\n",
-    "        self.y =y\n",
+    "        self.y = y\n",
     "    def add(self):\n",
     "        return self.x + self.y\n",
     "    @classmethod\n",
@@ -207,7 +219,10 @@
     "        if x == True:\n",
     "            del self.x\n",
     "        if y == True:\n",
-    "            del self.y"
+    "            del self.y\n",
+    "            \n",
+    "a = Numbers(1,2)\n",
+    "a.value.setter()"
    ]
   },
   {
